--- a/index.html
+++ b/index.html
@@ -752,33 +752,39 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Projet 1 - Strasbourg -->
                 <a href="https://www.lespiscinesdurhin.com/galerie/nos-realisations-3/" target="_blank" rel="noopener noreferrer" class="group relative aspect-[4/3] rounded-[2rem] overflow-hidden border border-white/5 hover:border-orange/50 transition-all block cursor-pointer" data-aos="fade-up">
-                    <img src="assets/55337074-5a47-4443-8482-8d0269fe66c1-7a973488-86d5-46e3-af6a-08d191b0fbcb.png" 
-                         onerror="this.src='assets/55337074-5a47-4443-8482-8d0269fe66c1-a25f61dc-d360-4d30-8ab6-ef2d193b24e8.png'"
-                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Piscine moderne avec terrasse">
-                    <div class="absolute inset-0 bg-gradient-to-t from-navy to-transparent"></div>
-                    <div class="absolute bottom-6 left-6">
+                    <div class="relative w-full h-full overflow-hidden">
+                        <img src="assets/55337074-5a47-4443-8482-8d0269fe66c1-7a973488-86d5-46e3-af6a-08d191b0fbcb.png" 
+                             onerror="this.src='assets/55337074-5a47-4443-8482-8d0269fe66c1-a25f61dc-d360-4d30-8ab6-ef2d193b24e8.png'"
+                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Piscine moderne avec terrasse">
+                    </div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-navy to-transparent pointer-events-none"></div>
+                    <div class="absolute bottom-6 left-6 z-10 pointer-events-none">
                         <p class="text-xs font-black text-orange uppercase mb-1">Strasbourg</p>
                         <p class="text-lg font-black text-white">Piscine sur mesure</p>
                     </div>
                 </a>
                 <!-- Projet 2 - Haguenau -->
                 <a href="https://www.lespiscinesdurhin.com/galerie/nos-realisations-3/" target="_blank" rel="noopener noreferrer" class="group relative aspect-[4/3] rounded-[2rem] overflow-hidden border border-white/5 hover:border-orange/50 transition-all block cursor-pointer" data-aos="fade-up" data-aos-delay="100">
-                    <img src="assets/6c5189f8-947a-4149-bcd3-767820712a0d-5d9b63e8-b1f4-4c9c-b6c1-93352005551f.png" 
-                         onerror="this.src='assets/c6bab003-6c17-4cf0-a85f-c2e05df9f677-25021f3a-3e43-48d1-971e-0fbe30968b3e.png'"
-                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Piscine rénovée">
-                    <div class="absolute inset-0 bg-gradient-to-t from-navy to-transparent"></div>
-                    <div class="absolute bottom-6 left-6">
+                    <div class="relative w-full h-full overflow-hidden">
+                        <img src="assets/6c5189f8-947a-4149-bcd3-767820712a0d-5d9b63e8-b1f4-4c9c-b6c1-93352005551f.png" 
+                             onerror="this.src='assets/c6bab003-6c17-4cf0-a85f-c2e05df9f677-25021f3a-3e43-48d1-971e-0fbe30968b3e.png'"
+                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Piscine rénovée">
+                    </div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-navy to-transparent pointer-events-none"></div>
+                    <div class="absolute bottom-6 left-6 z-10 pointer-events-none">
                         <p class="text-xs font-black text-orange uppercase mb-1">Haguenau</p>
                         <p class="text-lg font-black text-white">Rénovation</p>
                     </div>
                 </a>
                 <!-- Projet 3 - Saverne -->
                 <a href="https://www.lespiscinesdurhin.com/galerie/nos-realisations-3/" target="_blank" rel="noopener noreferrer" class="group relative aspect-[4/3] rounded-[2rem] overflow-hidden border border-white/5 hover:border-orange/50 transition-all block cursor-pointer" data-aos="fade-up" data-aos-delay="200">
-                    <img src="assets/2bdba317-2436-477c-8794-c0a046a09dff_2-6b51be6d-5fa7-4374-8a43-6e8885ea58c4.png" 
-                         onerror="this.src='assets/2bdba317-2436-477c-8794-c0a046a09dff-d82e6935-3103-4cc9-aaf2-859e29d3df31.png'"
-                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Piscine avec jardin">
-                    <div class="absolute inset-0 bg-gradient-to-t from-navy to-transparent"></div>
-                    <div class="absolute bottom-6 left-6">
+                    <div class="relative w-full h-full overflow-hidden">
+                        <img src="assets/2bdba317-2436-477c-8794-c0a046a09dff_2-6b51be6d-5fa7-4374-8a43-6e8885ea58c4.png" 
+                             onerror="this.src='assets/2bdba317-2436-477c-8794-c0a046a09dff-d82e6935-3103-4cc9-aaf2-859e29d3df31.png'"
+                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700" alt="Piscine avec jardin">
+                    </div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-navy to-transparent pointer-events-none"></div>
+                    <div class="absolute bottom-6 left-6 z-10 pointer-events-none">
                         <p class="text-xs font-black text-orange uppercase mb-1">Saverne</p>
                         <p class="text-lg font-black text-white">Piscine sur mesure</p>
                     </div>
@@ -853,8 +859,12 @@
         </div>
 
         <!-- Bouton Trigger -->
-        <button onclick="toggleChat()" class="fixed bottom-10 right-10 md:bottom-10 md:right-10 w-16 h-16 bg-orange rounded-[30px] flex items-center justify-center shadow-2xl z-[1001] hover:scale-110 transition-transform border-2 border-white/20 btn-premium chat-trigger-btn">
+        <button onclick="toggleChat()" class="fixed bottom-10 right-10 md:bottom-10 md:right-10 w-16 h-16 bg-orange rounded-[30px] flex items-center justify-center shadow-2xl z-[1001] hover:scale-110 transition-transform border-2 border-white/20 btn-premium chat-trigger-btn relative">
             <i class="fas fa-comment-alt text-navy text-2xl"></i>
+            <!-- Badge notification rouge -->
+            <span id="chat-notification-badge" class="absolute -top-1 -right-1 w-5 h-5 bg-red-500 rounded-full flex items-center justify-center text-white text-[10px] font-black shadow-lg animate-pulse hidden">
+                <span class="w-2 h-2 bg-white rounded-full"></span>
+            </span>
         </button>
     </div>
 
@@ -1063,6 +1073,12 @@
         // Fonction toggle (pour le bouton manuel)
         function toggleChat() {
             const chat = document.getElementById('chat-window');
+            // Masquer le badge quand on ouvre le chat
+            const badge = document.getElementById('chat-notification-badge');
+            if (badge) {
+                badge.classList.add('hidden');
+            }
+            
             if (chat.style.display === 'flex' || chat.style.display === '') {
                 closeChat();
             } else {
@@ -1134,7 +1150,7 @@
             }, 10000);
         }
 
-        // Ouverture automatique après 30 secondes de navigation
+        // Notification du chatbot après 1 minute
         document.addEventListener('DOMContentLoaded', function() {
             const closeBtn = document.getElementById('close-chat');
             if (closeBtn) {
@@ -1156,6 +1172,15 @@
                     // NE PAS ouvrir le chat automatiquement - l'utilisateur doit cliquer
                 }
             }, 30000); // 30 secondes - laisse le temps de découvrir les réalisations
+            
+            // Afficher le badge rouge sur le bouton après 1 minute
+            setTimeout(() => {
+                const badge = document.getElementById('chat-notification-badge');
+                if (badge) {
+                    badge.classList.remove('hidden');
+                    badge.classList.add('animate-pulse');
+                }
+            }, 60000); // 1 minute
         });
 
         // ============================================
