Fix: Effet vague header, animation message chatbot

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             </div>
 
     <!-- Header -->
-    <header class="fixed w-full z-[100] py-4 px-6 lg:px-10 border-b border-white/5 premium-blur">
+    <header class="fixed w-full z-[100] py-4 px-6 lg:px-10 border-b border-white/5 premium-blur wave-effect">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-3">
                 <!-- Logo HTML/CSS selon structure verticale originale avec animation subtile -->
@@ -1007,7 +1007,7 @@
             <!-- Zone Messages -->
             <div id="chat-msgs" class="flex-grow p-4 overflow-y-auto flex flex-col bg-gray-50">
                 <!-- Message de bienvenue automatique -->
-                <div class="msg msg-ai" id="welcome-message" style="display: none;">
+                <div class="msg msg-ai" id="welcome-message" style="display: none; opacity: 0;">
                     Bonjour ! 👋 Je suis l'assistant des Piscines du Rhin. Comment puis-je vous aider ?
                 </div>
             </div>
