URGENT: CSS mobile simplifié, chatbot fixed bottom-20 right-20, structure HTML vérifiée

--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
         </div>
 
         <!-- Bouton Trigger -->
-        <button onclick="toggleChat()" class="fixed bottom-6 right-6 md:bottom-6 md:right-6 w-16 h-16 bg-orange rounded-[30px] flex items-center justify-center shadow-2xl z-[1000] hover:scale-110 transition-transform border-2 border-white/20 btn-premium chat-trigger-btn relative">
+        <button onclick="toggleChat()" class="fixed bottom-20 right-20 w-16 h-16 bg-orange rounded-[30px] flex items-center justify-center shadow-2xl z-[1000] hover:scale-110 transition-transform border-2 border-white/20 btn-premium chat-trigger-btn">
             <i class="fas fa-comment-alt text-navy text-2xl"></i>
             <!-- Badge notification positionné au-dessus à gauche pour ne pas gêner le champ de saisie -->
             <span id="chat-notification-badge" class="absolute -top-3 -left-1 text-[10px] font-black text-white bg-red-500 rounded-full w-5 h-5 flex items-center justify-center shadow-lg border-2 border-orange hidden">+1</span>
