URGENT: CSS mobile complètement nettoyé - seulement photos 1 colonne, 320 lignes supprimées

--- a/index.html
+++ b/index.html
@@ -505,8 +505,7 @@
         }
         
         /* ============================================
-           RESPONSIVE MOBILE - SIMPLIFIÉ ET SÉCURISÉ
-           Tous les écrans < 768px
+           RESPONSIVE MOBILE - SIMPLE ET PROPRE
            ============================================ */
         @media (max-width: 768px) {
             /* ============================================
