--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@
                 showFieldError(ville, '⚠️ La ville ou le code postal est obligatoire');
                 isValid = false;
             } else if (ville.value.trim().length < 2) {
-                showFieldError(ville, '⚠️ Veuillez entrer une ville valide (minimum 2 caractères)');
+                showFieldError(ville, '⚠️ Veuillez entrer une adresse valide (minimum 2 caractères)');
                 isValid = false;
             }
 
@@ -1605,7 +1605,7 @@
             if (villeField) {
                 villeField.addEventListener('blur', function() {
                     if (this.value.trim() && this.value.trim().length < 2) {
-                        showFieldError(this, '⚠️ Veuillez entrer une ville valide (minimum 2 caractères)');
+                        showFieldError(this, '⚠️ Veuillez entrer une adresse valide (minimum 2 caractères)');
                     } else if (this.value.trim()) {
                         this.classList.remove('error');
                         const errorMsg = this.parentElement.querySelector('.error-message');
