Add Bing Webmaster Tools verification meta tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     
     <!-- Google Search Console -->
     <meta name="google-site-verification" content="vKapDWuKFGUEG17TnHUVMldHW5rqZTiJ-T8xbHPRO0g" />
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="26D8F1F405EA9C24E3E6B52791051A69" />
     
     <!-- Preload hero image (LCP) -->
     <link rel="preload" as="image" href="assets/55337074-5a47-4443-8482-8d0269fe66c1-a25f61dc-d360-4d30-8ab6-ef2d193b24e8.png">
