--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
          * - Couleurs principales : Orange #E69B3F, Bleu #20E2D7, Texte en script clair
          */
         
-        /* Logo HTML/CSS - Structure verticale */
+        /* Logo : fond blanc fusionné avec la couleur du site (navy) */
+        .logo-no-blanc {
+            mix-blend-mode: multiply;
+            filter: brightness(1.15) contrast(1.05);
+        }
+        /* Sur fond clair (footer si besoin), on garde le logo lisible */
         .select-none {
             user-select: none;
         }
@@ -974,7 +979,7 @@
                 <a href="#hero-section" class="flex items-center gap-3 select-none hover:opacity-90 transition-opacity duration-300 flex-shrink-0">
                     <img src="assets/logo-piscines-du-rhin.png" 
                          alt="Piscines du Rhin - Pisciniste Bas-Rhin 67" 
-                         class="h-14 md:h-16 w-auto object-contain rounded-lg"
+                         class="h-14 md:h-16 w-auto object-contain logo-no-blanc"
                          loading="eager">
                 </a>
                 <span class="text-[10px] font-bold text-orange uppercase tracking-[0.2em] hidden sm:inline-block">Bas-Rhin (67)</span>
@@ -1301,7 +1306,7 @@
             <div class="flex flex-col items-center gap-6 mb-6">
                 <img src="assets/logo-piscines-du-rhin.png" 
                      alt="Piscines du Rhin - Pisciniste Bas-Rhin 67" 
-                     class="h-16 w-auto object-contain opacity-90"
+                     class="h-16 w-auto object-contain logo-no-blanc opacity-90"
                      loading="lazy">
                 <p class="text-gray-400 text-sm font-medium mb-4">Bureau technique</p>
             </div>
