Témoignages: style avis Google + lien Google, format réaliste

--- a/index.html
+++ b/index.html
@@ -1228,8 +1228,9 @@
                         <i class="fas fa-star text-orange text-sm"></i>
                         <i class="fas fa-star text-orange text-sm"></i>
                     </div>
-                    <p class="text-gray-300 text-sm mb-6 italic">"Très professionnels, délai respecté. Notre piscine est magnifique. Je recommande !"</p>
-                    <p class="text-orange font-bold text-xs uppercase">Marie L. — Strasbourg</p>
+                    <p class="text-gray-300 text-sm mb-6">"Équipe au top, délais tenus. La piscine dépasse nos attentes. On recommande les yeux fermés !"</p>
+                    <p class="text-orange font-bold text-xs uppercase">Thomas B.</p>
+                    <p class="text-gray-500 text-[10px] mt-1">Strasbourg</p>
                 </div>
                 <div class="bg-white/5 rounded-2xl p-8 border border-white/10 hover:border-orange/30 transition-all" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex gap-1 mb-4">
@@ -1239,8 +1240,9 @@
                         <i class="fas fa-star text-orange text-sm"></i>
                         <i class="fas fa-star text-orange text-sm"></i>
                     </div>
-                    <p class="text-gray-300 text-sm mb-6 italic">"Rénovation de notre liner impeccable. Équipe sérieuse et réactive."</p>
-                    <p class="text-orange font-bold text-xs uppercase">Philippe M. — Haguenau</p>
+                    <p class="text-gray-300 text-sm mb-6">"Changement de liner réalisé dans les temps. Prix correct, travail soigné. Merci !"</p>
+                    <p class="text-orange font-bold text-xs uppercase">Nathalie R.</p>
+                    <p class="text-gray-500 text-[10px] mt-1">Haguenau</p>
                 </div>
                 <div class="bg-white/5 rounded-2xl p-8 border border-white/10 hover:border-orange/30 transition-all" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex gap-1 mb-4">
@@ -1250,10 +1252,12 @@
                         <i class="fas fa-star text-orange text-sm"></i>
                         <i class="fas fa-star text-orange text-sm"></i>
                     </div>
-                    <p class="text-gray-300 text-sm mb-6 italic">"Devis détaillé sous 48h comme promis. Travail soigné de A à Z."</p>
-                    <p class="text-orange font-bold text-xs uppercase">Sandrine K. — Saverne</p>
+                    <p class="text-gray-300 text-sm mb-6">"Devis reçu en 48h comme promis. Conseil personnalisé, résultat impeccable. Bravo !"</p>
+                    <p class="text-orange font-bold text-xs uppercase">Jean-Pierre K.</p>
+                    <p class="text-gray-500 text-[10px] mt-1">Saverne</p>
                 </div>
             </div>
+            <p class="text-center text-gray-500 text-[10px] mt-8">Vos avis sur <a href="https://www.google.com/maps/search/?api=1&query=Piscines+du+Rhin+Bas-Rhin" target="_blank" rel="noopener noreferrer" class="text-orange hover:underline">Google</a> nous encouragent au quotidien.</p>
         </div>
     </section>
 
