Témoignages: vrais avis Google (Régine Schino, Luc Buessinger, Carole Stroh)

--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@
         </div>
     </section>
 
-    <!-- Section Témoignages -->
+    <!-- Section Témoignages - Avis Google réels -->
     <section class="py-20 bg-[#020D17] border-t border-white/5">
         <div class="container mx-auto px-6">
             <h2 class="text-center text-3xl md:text-4xl font-black uppercase tracking-widest mb-12 text-white">
@@ -1228,9 +1228,9 @@
                         <i class="fas fa-star text-orange text-sm"></i>
                         <i class="fas fa-star text-orange text-sm"></i>
                     </div>
-                    <p class="text-gray-300 text-sm mb-6">"Équipe au top, délais tenus. La piscine dépasse nos attentes. On recommande les yeux fermés !"</p>
-                    <p class="text-orange font-bold text-xs uppercase">Thomas B.</p>
-                    <p class="text-gray-500 text-[10px] mt-1">Strasbourg</p>
+                    <p class="text-gray-300 text-sm mb-6">"Super service, nous avons réalisé notre piscine avec eux il y a 3 ans maintenant, finie dans les temps, tout était conforme, magnifique. Depuis, ils sont hyper réactifs au moindre souci, les secrétaires sont adorables, bref on y retournerait les yeux fermés."</p>
+                    <p class="text-orange font-bold text-xs uppercase">Luc Buessinger</p>
+                    <p class="text-gray-500 text-[10px] mt-1">Avis Google — juin 2025</p>
                 </div>
                 <div class="bg-white/5 rounded-2xl p-8 border border-white/10 hover:border-orange/30 transition-all" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex gap-1 mb-4">
@@ -1240,9 +1240,9 @@
                         <i class="fas fa-star text-orange text-sm"></i>
                         <i class="fas fa-star text-orange text-sm"></i>
                     </div>
-                    <p class="text-gray-300 text-sm mb-6">"Changement de liner réalisé dans les temps. Prix correct, travail soigné. Merci !"</p>
-                    <p class="text-orange font-bold text-xs uppercase">Nathalie R.</p>
-                    <p class="text-gray-500 text-[10px] mt-1">Haguenau</p>
+                    <p class="text-gray-300 text-sm mb-6">"Nous avons déjà fait appel à plusieurs reprises à la société Piscines du Rhin, et avons toujours été pleinement satisfaits. J'apprécie tout particulièrement la qualité de leur travail et leur grand professionnalisme."</p>
+                    <p class="text-orange font-bold text-xs uppercase">Régine Schino</p>
+                    <p class="text-gray-500 text-[10px] mt-1">Avis Google — juin 2025</p>
                 </div>
                 <div class="bg-white/5 rounded-2xl p-8 border border-white/10 hover:border-orange/30 transition-all" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex gap-1 mb-4">
@@ -1252,12 +1252,12 @@
                         <i class="fas fa-star text-orange text-sm"></i>
                         <i class="fas fa-star text-orange text-sm"></i>
                     </div>
-                    <p class="text-gray-300 text-sm mb-6">"Devis reçu en 48h comme promis. Conseil personnalisé, résultat impeccable. Bravo !"</p>
-                    <p class="text-orange font-bold text-xs uppercase">Jean-Pierre K.</p>
-                    <p class="text-gray-500 text-[10px] mt-1">Saverne</p>
+                    <p class="text-gray-300 text-sm mb-6">"Merci à Les Piscines du Rhin pour leur professionnalisme et leur travail de qualité, nous sommes plus que ravie du résultat, nous pouvons maintenant profiter de notre superbe piscine ! Nous recommandons les yeux fermés !"</p>
+                    <p class="text-orange font-bold text-xs uppercase">Carole Stroh</p>
+                    <p class="text-gray-500 text-[10px] mt-1">Avis Google — août 2023</p>
                 </div>
             </div>
-            <p class="text-center text-gray-500 text-[10px] mt-8">Vos avis sur <a href="https://www.google.com/maps/search/?api=1&query=Piscines+du+Rhin+Bas-Rhin" target="_blank" rel="noopener noreferrer" class="text-orange hover:underline">Google</a> nous encouragent au quotidien.</p>
+            <p class="text-center text-gray-500 text-[10px] mt-8">Tous nos avis sur <a href="https://www.google.com/maps/search/?api=1&query=Piscines+du+Rhin+Bas-Rhin" target="_blank" rel="noopener noreferrer" class="text-orange hover:underline">Google</a></p>
         </div>
     </section>
 
